// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be active 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0:after {
  content: '';
  position: absolute;
  height: 2px;
  width: 100%;
  bottom: 0;
  left: 0;
  z-index: 1;
}

.c0:after {
  background: #00aeef;
}

<div>
  <div>
    <div
      class=""
    >
      test
    </div>
    <span
      class="c0"
    >
      15.10.2018
    </span>
  </div>
</div>
`;

exports[`should be unactive 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0:after {
  content: '';
  position: absolute;
  height: 2px;
  width: 100%;
  bottom: 0;
  left: 0;
  z-index: 1;
}

<div>
  <div>
    <div
      class=""
    >
      test
    </div>
    <span
      class="c0"
    >
      15.10.2018
    </span>
  </div>
</div>
`;
